compiler/tests/compile-error/type-lowering-errors.arret
(import [stdlib base])

(deftype _ unbound)
          ;^^^^^^^ ERROR unable to resolve `unbound`

(deftype _ (unbound))
           ;^^^^^^^ ERROR unable to resolve `unbound`

(deftype _ quote)
          ;^^^^^ ERROR primitive cannot be used as a type

(deftype _ 1)
          ;^ ERROR unsupported literal type

(deftype _ '(1))
            ;^ ERROR unsupported literal type

(deftype _ [1])
           ;^ ERROR unsupported literal type

(deftype _ (->))
           ;^^ ERROR purity cannot be used as a type constructor

; This isn't public yet but still test it
(import (only [arret internal primitives] All))

(deftype _ (All))
          ;^^^^^ ERROR polymorphic variable declaration missing

(deftype _ (All []))
               ;^^ ERROR expected polymorphic variable set, found empty vector

(deftype _ (All #{} List Int))
          ;^^^^^^^^^^^^^^^^^^ ERROR polymorphism on non-function type